top-banner added

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
              But nobody pays me a dime for that work.
              That's why I am learning and mastering web development. 
              I will not stop until I become the Web Development Hero.</p>
-    </div>
-    <div class="half-width">
+        
+             <a class="link-button" target="_blank" href="www.programming-hero.com" alt="">Hire Me</a>
+        </div>
+    <div class="half-width-img">
         <div class="">
-        <img src="images/hasina.png">
+        <img src="images/Hasina.png">
     </div>
    </section>
    
