--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section>
+   <section class="top-banner">
     <div class="half-width">
         <h1>Welcome To</h1>
         <h1><span class="color-tag" >Hasina Akter</span> World!</h1>
@@ -22,12 +22,30 @@
              That's why I am learning and mastering web development. 
              I will not stop until I become the Web Development Hero.</p>
         
-             <a class="link-button" target="_blank" href="www.programming-hero.com" alt="">Hire Me</a>
+             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/hasina-akter-a929b6190/" alt="">Hire Me</a>
         </div>
     <div class="half-width-img">
         <div class="">
         <img src="images/Hasina.png">
     </div>
+   </section>
+     
+   <section class="dream-big">
+
+    <div  class="half-width-img">
+        <img src="images/hasina2.png">
+    </div>
+    <div  class="half-width">
+    <h1>Dream Big</h1>
+    <h3>Become a Web Developer</h3>
+    <p>I already learned the basic HTML and CSS. I can build any simple website.
+         I can even teach my grandma how to make simple website.
+          My goal is to build 3 websites and learn advanced topics.</p>
+          <a class="link-button" target="_blank" href=" " alt="" >Download Resume</a>
+ 
+   </div>
+  
+
    </section>
    
 </body>
