--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
      
     <section class="dream-big flex-contrainer">
 
-    <div  class="half-width-img">
+    <div class="half-width-img">1
         <img src="images/hasina2.png">
     </div>
     <div  class="half-width">
