--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     <div class="half-width-image">
         
-        <img src="images/Hasina.png">
+        <img src="images/hasina.png">
     </div>
    </section>
 
